# dungeon-master

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  startup.sh
.cursor/rules/: cline-rules.mdc
.github/workflows/: desktop-release.yml
data/: runtime_settings.json
docs/: manual-testing.md
memory-bank/: Trying to find a TTRPG community on Discord that i.md  activeContext.md  featureKanban-hybrid-followups.md  featureKanban.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: __init__.py  build_tauri_sidecar.py
src/dungeon_master/: __init__.py  api.py  backfill_cli.py  cairn.py  campaign.py  cancel.py  capability_oracle_guard.py  character_effect_updater.py  cli.py  continuity_classifier.py  explainer.py  fixture_cli.py  memory.py  models.py  narrative.py  npc_updater.py  observability.py  oracle.py  save_library.py  service.py  settings.py  state_store.py  stream_session.py  thread_updater.py  turn_router.py
src/dungeon_master/config/: README.md  __init__.py  app.py
tests/: factories.py  test_api.py  test_backfill_cli.py  test_cairn.py  test_campaign.py  test_config.py  test_continuity_classifier.py  test_fixture_cli.py  test_memory.py  test_narrative.py  test_npc_updater.py  test_oracle.py  test_party_models.py  test_save_library.py  test_service.py  test_state_store.py  test_thread_updater.py  test_turn_router.py
web/: index.html  package-lock.json  package.json  test_border.html  test_scroll.html  tsconfig.json  vite.config.ts
web/public/fonts/: README.md
web/public/textures/: SOURCES.md
web/src/: App.svelte  app.d.ts  main.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
web/src/components/: CairnReadout.svelte  CampaignSeedEditor.svelte  ChaosDial.svelte  CharacterEditor.svelte  CharacterFolio.svelte  CharacterSetup.svelte  CharacterTemplateCard.svelte  ChatFeed.svelte  ChatMessage.svelte  CollapsedThinking.svelte  CombatTracker.svelte  Composer.svelte  CredentialSetupModal.svelte  DirectivesEditor.svelte  Drawer.svelte  EndBanner.svelte  InlineCombatStrip.svelte  Inspector.svelte  LoadingPanel.svelte  MechanicalReceipt.svelte  MessageActions.svelte  NPCsPanel.svelte  NotesEditor.svelte  SaveLibrary.svelte  SettingsModal.svelte  StageChecklist.svelte  StatusStrip.svelte  SystemMenu.svelte  ThreadsPanel.svelte
web/src/lib/: api.test.ts  api.ts  cairn.test.ts  cairn.ts  campaign-seed.test.ts  campaign-seed.ts  cancel.test.ts  character.test.ts  character.ts  combat.test.ts  combat.ts  common-actions.test.ts  common-actions.ts  desktop.ts  (+33 more)
(+1 files in other folders)
