[project]
name = "dungeon-master"
version = "0.1.0"
description = "A solo AI game master with a deterministic oracle backend and a bespoke Svelte UI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "litellm>=1.83.14",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
dungeon-master = "dungeon_master.cli:main"
dungeon-master-backfill = "dungeon_master.backfill_cli:main"
dungeon-master-fixtures = "dungeon_master.fixture_cli:main"

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.19.0",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D203",
    "D213",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "ISC001",
    "S311",
    "TC001",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"src/dungeon_master/cairn.py" = ["C901", "E501", "PLR0911", "PLR0912", "PLR0915", "PLR2004"]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
